[tool.poetry]
name = "fetch-network-event-polling"
version = "0.1.0"
description = ""
authors = ["skip"]
readme = "README.md"
packages = [{include = "fetch_network_event_polling"}]

[tool.poetry.dependencies]
python = "^3.8.10"
cosmpy = "0.6.2"
certifi = "^2023.5.7"
grpcio = "1.47.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
